# yasim-sctcr

./: .gitignore  Copying.md  MANIFEST.in  Makefile  Readme.md  bashrc  clear_pyc.sh  create_git_dist.sh  fmt.sh  get_imports.sh  notebook-checkout.sh  pyproject.toml  requirements.txt  scc.sh  setup.py  shfmt.sh  todo.md
data/: IMGT_Protein_Display.min.json.xz  cdr3_insertion_table.min.json.xz  ncbi_dataset.tsv.xz  tcr_cache.min.json.xz  usage_bias.min.json.xz
doc/: .dockerignore  .gitignore  Dockerfile  Makefile  Readme.md  cli_docs.toml  conf.py  index.md  preconfigure.py
doc/gen_zenodo/: run.R  run.sh
doc/src/: Makefile  faq.md  glossary.md
doc/src/data/: cdr3_deletion_table.min.json.xz  tcr_genelist.min.json.xz
doc/src/fig/: llrg_step.graphml  yasim_as_events_generator.graphml  yasim_proj.graphml  yasim_sc.graphml  yasim_sctcr.graphml  yasim_toplevel.graphml
doc/src/license/: MIT-0.md  gpl-v3.md  index.md
doc/src/quickstart/: .gitignore  Makefile  index.ipynb.md  run.sh
doc/src/tutorial/: index.md  quickstart.md  ref_transcriptome.md  sc.md  sctcr.md  seurat_scdesign2.md
doc/src/tutorial_sctcr/: index.ipynb.md
explore/: .gitignore
explore/compare_reference/: imgt_parse.py
explore/huardb_da/: .gitignore  collect_stop_codon_pos.py  collect_to_cell.py  collect_vcf.py  merge_data.py  plot.R  read_json.py  run.sh
explore/huardb_gex/: sim.R
explore/husch_gex/: .gitignore  Readme.md  analyze_trn.R  analyze_trn_salmon.R  qc.R  run.sh  scART.py  sim.R  to_yasim_sctcr.py
explore/husch_gex/slurm/: build_salmon_index.sh
explore/test/: .gitignore  imgt_parse.py  run.sh
explore/test_cellranger/: .gitignore  plot.R  run.sh
explore/trn_tcr_simulation/: .gitignore  Readme.md  gen_to_jiashan.sh  husch_analyze_trn.R  husch_analyze_trn_salmon.R  husch_get_data.sh  husch_qc.R  husch_sim.R  mux.py  mux.sh  ref_get_data.sh  ref_get_pcg_from_biomart.R  run.sh  scART.py  sim_gex.sh  sim_scaffold.sh  sim_tcr.sh  sim_tcr_stats.R  trust4_build_index.sh
explore/trn_tcr_simulation/slurm/: build_salmon_index.sh  run_sim_gex.sh  run_sim_tcr.sh  run_simulation.sh
pending/: Readme.md
pending/doc/src/fig/: llrg_adapter.graphml  yasim_scTCR_scRNA.graphml  yasim_tcr_cache_generator.graphml
pending/doc/src/license/: cc0-universal.md
pending/doc/src/tutorial_sctcr/: index.ipynb.md
src/yasim_sc/: __init__.py  __main__.py
src/yasim_sc/_main/: __init__.py  _generate_barcoded_isoform_replicates.py  _sample_pcg.py  art.py  generate_barcode.py  generate_barcoded_isoform_replicates.py  sample_pcg.py
src/yasim_sc/helper/: rna_seq.py
src/yasim_sctcr/: __init__.py  __main__.py
src/yasim_sctcr/_main/: __init__.py  convert_anndata.py  exclude_tcr_from_gtf.py  generate_tcr_cache.py  generate_tcr_clonal_expansion.py  generate_tcr_depth.py  rearrange_tcr.py  scaffold.py
src/yasim_sctcr/_main/sample_data/: cdr3_deletion_table.min.json  cdr3_insertion_table.min.json  tcr_aa_table.min.json  tcr_gene_list.min.json
src/yasim_sctcr/helper/: __init__.py  tcr.py
suppl_data_analysis/trn_tcr_simulation/: .gitignore  run.sh
test/: Makefile  cmp.py  trust4_build_index.sh
